// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessages > renders with assistant correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <div data-slot="leading" class=""><span data-slot="root"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="icon" class=""></svg></span></div>
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with class correctly 1`] = `
"<div data-slot="root" class="max-w-3xl" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with compact correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with content slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Content slot</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Content slot</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with default slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">Default slot
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with files slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with indicator slot correctly 1`] = `
"<div data-status="submitted" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Indicator slot</div>
      <!--v-if-->
    </div>
  </article>
  <!---->
</div>"
`;

exports[`ChatMessages > renders with messages correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status error correctly 1`] = `
"<div data-status="error" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status ready correctly 1`] = `
"<div data-status="ready" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status streaming correctly 1`] = `
"<div data-status="streaming" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with status submitted correctly 1`] = `
"<div data-status="submitted" data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">
        <div data-slot="indicator" class=""><span></span><span></span><span></span></div>
      </div>
      <!--v-if-->
    </div>
  </article>
  <!---->
</div>"
`;

exports[`ChatMessages > renders with ui correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with user correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <div data-slot="leading" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span></div>
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;

exports[`ChatMessages > renders with viewport slot correctly 1`] = `
"<div data-slot="root" class="" style="--last-message-height: 0px;">
  <article data-role="user" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">Hello, how are you?</div>
      <!--v-if-->
    </div>
  </article>
  <article data-role="assistant" data-slot="root" class="">
    <!--v-if-->
    <div data-slot="container" class="">
      <!--v-if-->
      <div data-slot="content" class="">I am fine, thank you!</div>
      <!--v-if-->
    </div>
  </article>
  <!--v-if-->
  <!---->
</div>"
`;
